src/app/components/ThemeToggle/styles.module.scss
.magnetic {
  margin: -100px;
  padding: 100px;
  display: inline-flex;
  border-radius: 50%;
  position: fixed;
  bottom: 3rem;
  right: 3rem;
  cursor: pointer;
}

.circle {
  position: relative;
  width: 2rem;
  height: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.fullMoon,
.moonOverlay {
  width: 100%;
  height: 100%;
  border-radius: 50%;
}

.fullMoon {
  background-color: white;
}

.moonOverlay {
  position: absolute;
  background-color: #111827;
  pointer-events: none;
}

